more height to mainBody to try and stop text bleeding over on phone.

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -326,7 +326,7 @@ form {
     }
 
     .mainBody {
-      height: 700px;
+      height: 900px;
     }
 
     header {
